--- a/core/raydp-main/pom.xml
+++ b/core/raydp-main/pom.xml
@@ -240,15 +240,12 @@
         <artifactId>maven-assembly-plugin</artifactId>
         <version>3.0.0</version>
         <configuration>
-          <!--<descriptors>-->
-          <!--<decriptor>src/main/assembly/assembly.xml</decriptor>-->
-          <!--</descriptors>-->
           <appendAssemblyId>false</appendAssemblyId>
           <descriptorRefs>
             <descriptorRef>jar-with-dependencies</descriptorRef>
           </descriptorRefs>
         </configuration>
-        <executions>
+        <!-- <executions>
           <execution>
             <id>assembly</id>
             <phase>package</phase>
@@ -256,7 +253,7 @@
               <goal>single</goal>
             </goals>
           </execution>
-        </executions>
+        </executions> -->
       </plugin>
 
       <plugin>
